data/known-good/no-capture-arc.err
error[E0382]: borrow of moved value: `arc_v`
  --> /home/ariel/Rust/rust-master/src/test/compile-fail/no-capture-arc.rs:24:18
   |
20 |       thread::spawn(move|| {
   |  ___________________-
21 | |         assert_eq!((*arc_v)[3], 4);
22 | |     });
   | |_____- value moved here
23 | 
24 |       assert_eq!((*arc_v)[2], 3);
   |                    ^^^^^ value borrowed here after move

error[E0382]: borrow of moved value: `arc_v`
  --> /home/ariel/Rust/rust-master/src/test/compile-fail/no-capture-arc.rs:26:23
   |
20 |       thread::spawn(move|| {
   |  ___________________-
21 | |         assert_eq!((*arc_v)[3], 4);
22 | |     });
   | |_____- value moved here
...
26 |       println!("{:?}", *arc_v);
   |                         ^^^^^ value borrowed here after move

error: aborting due to 2 previous errors

